# forte

./: .gitignore  Cargo.toml  README.md  build.number  build.rs  deploy.sh
.github/workflows/: deploy.yml
assets/: icon.rc  icon.res
src/: app.rs  dsp.rs  elements.rs  errors.rs  main.rs  midi_list.rs  settings.rs  state.rs  tabs.rs  utils.rs  writer.rs  xsynth.rs
src/dsp/: limiter.rs
src/elements/: channel_cfg.rs  midi_list.rs  persistent_message.rs  render_settings.rs  sf_cfg.rs  sf_list.rs
src/errors/: error_message.rs  error_types.rs
src/tabs/: about.rs  render.rs  synth.rs
src/writer/: lame.rs  pcm.rs  vorbis.rs
src/xsynth/: midi_pool.rs  render_manager.rs  renderers.rs  soundfont_pool.rs
src/xsynth/renderers/: buffered.rs  standard.rs
