[package]
name = "forte"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.20"
eframe = "0.20"
proc-macro2 = "1.0.50"
midi-toolkit-rs = { git = "https://github.com/arduano/midi-toolkit-rs", rev = "4482d61" }
serde = "1.0.152"
xsynth-core = { git = "https://github.com/arduano/xsynth", rev = "2ef486b" }
xsynth-soundfonts = { git = "https://github.com/arduano/xsynth", rev = "2ef486b" }
egui_extras = "0.20"
egui_file = "0.7.0"
rand = "0.8.5"
num-format = "0.4.4"
crossbeam-channel = "0.5.6"
rayon = "1.6.1"
hound = "3.5.0"
regex = "1.7.1"
atomic_float = "0.1.0"
atomic = "0.5.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-appender = "0.2.2"
