[package]
name = "forte"
version = "0.2.0"
edition = "2021"

[dependencies]
egui = "0.22.0"
eframe = "0.22.0"
proc-macro2 = "1.0.50"
midi-toolkit-rs = { git = "https://github.com/arduano/midi-toolkit-rs", rev = "cff22ac" }
serde = "1.0.152"
xsynth-core = { git = "https://github.com/arduano/xsynth", rev = "fb8f272" }
xsynth-soundfonts = { git = "https://github.com/arduano/xsynth", rev = "fb8f272" }
egui_extras = "0.22.0"
egui_file = "0.9.0"
rand = "0.8.5"
num-format = "0.4.4"
crossbeam-channel = "0.5.6"
rayon = "1.6.1"
hound = "3.5.0"
regex = "1.7.1"
atomic_float = "0.1.0"
atomic = "0.5.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-appender = "0.2.2"
image = "0.24.5"
open = "5.0.0"
toml = "0.7.3"
dirs = "5.0.0"
vorbis_rs = "0.3.0"
mp3lame-encoder = "0.1.1"
fundsp = "0.15.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0.107"
openssl-sys = { version = "0.9", features = ["vendored"] }

[profile.release]
opt-level = 3
lto = true
